# Jupyviv

./: .gitignore  README.md  client.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml
jupyviv/: app.py  cli.py  communication.py  endpoints.py  kernel.py  sync.py  utils.py  vivify.py
jupyviv/agent/: cli.py  kernel.py
jupyviv/handler/: endpoints.py  sync.py  transport_editor.py
jupyviv/shared/: messages.py
jupyviv/shared/transport/: websocket.py
src/: kernel.py  sync.py
src/jupyviv/: __init__.py
src/jupyviv/agent/: __init__.py  kernel.py
src/jupyviv/handler/: __init__.py  endpoints.py  new.py  sync.py  transport_editor.py  vivify.py
src/jupyviv/shared/: deque.py  errors.py  lifetime.py  logs.py  messages.py  utils.py
src/jupyviv/shared/transport/: iostream.py  websocket.py
tests/: test_jupysync.py
