[project]
name = "jupyviv"
description = "Jupyter server for plain text editors and Vivify"
dynamic = ["version"]
dependencies = [
    "jupyter_client",
    "jupytext",
    "requests",
    "websockets"
]
requires-python = ">=3.12"

[project.scripts]
jupyviv = "jupyviv.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
