[project]
name = "jupyviv"
version = "0.1.0"
description = "Jupyter server for plain text editors and Vivify"
readme = "README.md"
authors = [
    { name = "Jannis Baum" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter-client>=8.6.3",
    "jupytext>=1.16.7",
    "requests>=2.32.3",
    "websockets>=15.0.1",
]

[project.scripts]
jupyviv = "jupyviv:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
