[project]
name = "jupyviv"
version = "0.1.0"
description = "Jupyter server for plain text editors and Vivify"
readme = "README.md"
authors = [
    { name = "Jannis Baum" }
]
requires-python = ">=3.9"
dependencies = [
    "jupyter-client>=8.6.3",
    "jupytext>=1.16.7",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "websockets>=15.0.1",
]

[project.scripts]
jupyviv = "jupyviv:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = "tests"
